crates/tribute-passes/src/native/snapshots/tribute_passes__native__rtti__tests__struct_no_ptr_fields.snap
---
source: crates/tribute-passes/src/native/rtti.rs
expression: output
---
core.module @test {
  !Test = adt.struct<Test(x: core.i32, y: core.i32)>
  !t0 = clif.func_sig<(core.ptr) -> core.nil>

  func.func @create_struct(%0: core.i32, %1: core.i32) -> !Test {
      %2 = adt.struct_new %0, %1 {type = !Test} : !Test
      func.return %2
  }
  tribute_rtti.layout {fields = ["u32", "u32"], index = 5, type = !Test}
  clif.func {sym_name = "__tribute_release_5", type = !t0} {
    ^bb0(%0: core.ptr):
      %1 = clif.iconst {value = 8} : core.i64
      %2 = clif.isub %0, %1 : core.ptr
      %3 = clif.iconst {value = 16} : core.i64
      %4 = clif.call %2, %3 {callee = @__tribute_dealloc} : core.nil
      clif.return
  }
  clif.data {align = 8, bytes = b"\0\0\0\0\0\0\0\0\x03\0\0\0\0\0\0\08\x01\0\0\x05\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x03\0\0\0\x01\0\0\0=\x01\0\0\x04\0\0\0\0\0\0\0\0\0\0\0\xf0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x03\0\0\0\x01\0\0\0B\x01\0\0\x03\0\0\0\0\0\0\0\0\0\0\0\xfc\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x03\0\0\0\x01\0\0\0E\x01\0\0\x03\0\0\0\0\0\0\0\0\0\0\0\x08\x01\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x03\0\0\0\x01\0\0\0H\x01\0\0\x05\0\0\0\0\0\0\0\0\0\0\0\x14\x01\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x02\0\0\0M\x01\0\0\x04\0\0\0\0\0\0\0\0\0\0\0 \x01\0\0\0\0\0\0A\x01\0\0\x01\0\0\0\x06\0\0\0A\x01\0\0\x01\0\0\0\x04 \0\0A\x01\0\0\x01\0\0\0\x03 \0\0A\x01\0\0\x01\0\0\0\x05@\0\0Q\x01\0\0\x01\0\0\0\x04 \0\0R\x01\0\0\x01\0\0\0\x04 \0\0BytesBool0NatIntFloatTestxy", sym_name = "__tribute_rtti"} {
      clif.func_reloc {func = @__tribute_release_5, offset = 200}
  }
  clif.func {sym_name = "__tribute_deep_release", type = clif.func_sig<(core.ptr, core.i64) -> core.nil>} {
    ^bb0(%0: core.ptr, %1: core.i64):
      %2 = clif.iconst {value = 8} : core.i64
      %3 = clif.isub %0, %2 : core.ptr
      %4 = clif.load %3 {offset = 4} : core.i32
      %5 = clif.uextend %4 : core.i64
      %6 = clif.iconst {value = 40} : core.i64
      %7 = clif.imul %5, %6 : core.i64
      %8 = clif.symbol_addr {sym = @__tribute_rtti} : core.ptr
      %9 = clif.iadd %8, %7 : core.ptr
      %10 = clif.load %9 {offset = 0} : core.ptr
      %11 = clif.iconst {value = 0} : core.ptr
      %12 = clif.icmp %10, %11 {cond = "eq"} : core.i8
      clif.brif %12 [^bb1, ^bb2]

    ^bb1:
      %13 = clif.iconst {value = 0} : core.i64
      %14 = clif.icmp %1, %13 {cond = "eq"} : core.i8
      clif.brif %14 [^bb4, ^bb3]

    ^bb2:
      %15 = clif.call_indirect %10, %0 {sig = !t0} : core.nil
      clif.return

    ^bb3:
      %16 = clif.call %3, %1 {callee = @__tribute_dealloc} : core.nil
      clif.return

    ^bb4:
      clif.trap {code = "unresolved_dynamic_release"}
  }
}
